Update styling and move model file to root directory

--- a/templates/index.html
+++ b/templates/index.html
@@ -50,14 +50,17 @@
       <div class="row justify-content-center mb-3">
       <div>
         <!--box's text-->
-        <h1>Insert an image</h1>
+        <h1 class="check_text">Check Your Face Asymmetry Degree</h1>
         <br>
       </div>
         <div class="col-md-6 text-center">
           <!-- File Input -->
-          <input class="form-control" id="upload_image" type="file" name="image" 
+           <fieldset class="BOX_bottom p-4">
+             <input class="form-control" id="upload_image" type="file" name="image" 
                  accept="image/png, image/jpg, image/jpeg" required
                  placeholder="Choose a photo of yourself" onchange="compressImage(event)">
+           </fieldset>
+         
         </div>
       </div>
 
@@ -76,7 +79,7 @@
 
     <div class="col-12 text-center mt-5 pt-3">
 
-        <h2 class="mb-3">Tips to Get the Best Out of FaceSymAI</h2>
+        <h2 class="mb-3">Tips to Get the Best Out of AsymmetriCheck</h2>
         <p class="lead">Maximize the accuracy of your facial symmetry analysis with these simple steps.</p>
     </div>
     <div class="container mt-4">
