--- a/static/style.css
+++ b/static/style.css
@@ -130,14 +130,21 @@ a:hover {
 
 /* ====== Form Styles ====== */
 
+
 .BOX {
   background: linear-gradient(to right, #8b81ee, #948af1, #9d93f5);
   box-shadow: 0 2px 10px rgb(0 0 0 / 0.1);
   border-radius: 12px;
-  max-width: 600px;
+  max-width: 1000px;
   margin: auto;
 }
-
+.BOX_bottom {
+  background: white;
+  box-shadow: 0 2px 10px rgb(0 0 0 / 0.1);
+  border-radius: 12px;
+  max-width: 1000px;
+  margin: auto;
+}
 .BOX h1 {
   font-weight: 700;
   color: #fff2f2;
