--- a/templates/result.html
+++ b/templates/result.html
@@ -27,7 +27,7 @@
     <!-- Hidden Menu -->
     <nav class="side-menu" id="sideMenu">
         <ul>
-        <li><a href="C:\Users\user\PycharmProjects\PythonProject3\templates\index.html">Home</a></li>
+        <li><a href="{{ url_for('index') }}">Home</a></li>
         <li><a href="#">Q&A</a></li>
         <li><a href="#">About</a></li>
         <li><a href="#">Contact</a></li>
